fix(web): overrides PF form group styles
For aligning items to "flex-start" to avoid inputs fields filling all
the avaible width. Most probably this is a workaround and there is a
better way to do it, but let's use it unitl discovering such an
approach.

--- a/web/src/assets/styles/index.scss
+++ b/web/src/assets/styles/index.scss
@@ -268,6 +268,10 @@
   --pf-v6-c-form__group--m-action--MarginBlockStart: var(--pf-t--global--spacer--md);
 }
 
+.pf-v6-c-form__group {
+  align-items: flex-start;
+}
+
 // Some utilities not found at PF
 .w-14ch {
   inline-size: 14ch;
